# label-309-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
src/: cbor.rs  cose.rs  hash.rs  hex.rs  ids.rs  kdf.rs  lib.rs  merkle.rs  poe_standard.rs  recipient.rs  seed_derive.rs
src/certificate/: build.rs  constants.rs  cose.rs  mod.rs  types.rs  verify.rs
src/client/: account.rs  cip309_client.rs  errors.rs  http.rs  label309_client.rs  mod.rs  off_host_sign.rs  poe.rs  publish.rs  records.rs  resumable.rs  transport.rs  types.rs
src/sealed_poe/: aead.rs  envelope.rs  errors.rs  kem.rs  mod.rs  slots.rs  stream.rs  stream_io.rs  transcript.rs  unwrap.rs  wrap.rs
src/verifier/: cbor_walker.rs  content.rs  decrypt.rs  egress.rs  fetch.rs  fetch_item.rs  merkle.rs  mod.rs  profile.rs  resolve.rs  serialize.rs  signatures.rs  tx_witnesses.rs  types.rs  verify.rs
tests/: cbor.rs  certificate.rs  client.rs  cose.rs  hash.rs  ids.rs  kdf.rs  merkle.rs  poe_standard.rs  recipient.rs  scaffold.rs  sealed_poe.rs  sealed_poe_construction.rs  sealed_poe_primitives.rs  sealed_poe_stream_io.rs  seed_derive.rs  verifier_fetch.rs  verifier_verify.rs
tests/client_parts/: error_mapping.rs  namespaces.rs  off_host_sign.rs  request_parity.rs  resumable.rs
tests/common/: mod.rs
tests/fixtures/client-url-join/: base-url-join-vectors.json
tests/fixtures/conformance/: README.md  parity-matrix.json
tests/fixtures/conformance/aead/: chacha20-poly1305-rfc8439-kat.json  xchacha20-poly1305-roundtrip.json
tests/fixtures/conformance/cardano/: confirmation-depth.json  tx-binding.json
tests/fixtures/conformance/carriage/: aux-data-envelope-forms.json  chunk-array-negative.json  chunk-array-positive.json
tests/fixtures/conformance/cbor/: canonical-decode-negative.json  canonical-encode-roundtrip.json
tests/fixtures/conformance/cose/: attached-detached-transform.json  sig-structure.json  sign1-build.json  sign1-verify.json  to-sign-verbatim.json
tests/fixtures/conformance/cross-service/: external-sealed-record-hybrid.json  external-sealed-record.json
tests/fixtures/conformance/kdf/: argon2id-params-consts.json  argon2id-v13-kat.json  passphrase-normalization.json
tests/fixtures/conformance/kem/: mlkem768x25519-decaps-kat.json  mlkem768x25519-encaps-deterministic-draft10-kat.json  mlkem768x25519-keygen-kat.json
tests/fixtures/conformance/merkle/: leaves-list-negative.json  rfc9162-sha256-root-kat.json
tests/fixtures/conformance/poe-record/: maximal-record-with-extension-keys.json  mixed-signature-record.json
tests/fixtures/conformance/sealed-poe/: construction-negative.json  hybrid-kek-salt.json  passphrase-n1.json  passphrase-negative.json  stream-layout.json  transcript-bytes.json  unwrap-duplicate-recipient.json  unwrap-multipriv-ac9-no-match.json  unwrap-multipriv-ac9-priv0-slot0.json  unwrap-multipriv-ac9-priv0-slot31.json  unwrap-multipriv-ac9-priv4-slot0.json  unwrap-multipriv-ac9-priv4-slot31.json  unwrap-multipriv-archived-match.json  unwrap-multipriv-current-match.json  unwrap-multipriv-n32-k10-worst-case.json  unwrap-multipriv-no-match.json  unwrap-n1-empty.json  unwrap-n3.json  unwrap-n32.json  unwrap-negative.json  unwrap-shadow-slot.json  wrap-hybrid-n1.json  wrap-hybrid-n3.json  wrap-n1-empty.json  wrap-n3.json  wrap-n32.json  x25519-kek-salt.json
tests/fixtures/conformance/seed-derive/: recipients-from-seed.json  seed-encoding-kat.json
tests/fixtures/conformance/sig/: ed25519-roundtrip.json  ed25519-torsion-cctv.json
tests/fixtures/conformance/unicode/: nfkc-16.0.json
tests/fixtures/conformance/validator/: enc-unsupported-roles.json  validator-bounds-negative.json  validator-negative.json  validator-positive.json
tests/fixtures/conformance/wallet-cose/: eternl-cose-missing-address.json  eternl-cose-tampered-address.json  eternl-cose-wrong-network-header.json  eternl-cose.json  lace-cose-missing-address.json  lace-cose-tampered-address.json  lace-cose-wrong-network-header.json  lace-cose.json  nami-cose-missing-address.json  nami-cose-tampered-address.json  nami-cose-wrong-network-header.json  nami-cose.json  nufi-cose-missing-address.json  nufi-cose-tampered-address.json  nufi-cose-wrong-network-header.json  nufi-cose.json  typhon-cose-missing-address.json  typhon-cose-tampered-address.json  typhon-cose-wrong-network-header.json  typhon-cose.json  yoroi-cose-missing-address.json  yoroi-cose-tampered-address.json  yoroi-cose-wrong-network-header.json  yoroi-cose.json
tests/fixtures/crypto-core/: README.md  _build-cose-fixtures.test.ts
tests/fixtures/crypto-core/aead/: xchacha20-poly1305-draft-irtf-cfrg-xchacha-03-kat.json
tests/fixtures/crypto-core/cbor/: canonical-encode-roundtrip.json
tests/fixtures/crypto-core/cose/: sig-structure.json  sign1-build.json  sign1-strict-ed25519.json  sign1-verify.json
tests/fixtures/crypto-core/hash/: dual-hash-equivalence.json  sha256-kat.json
tests/fixtures/crypto-core/kem/: mlkem768x25519-encaps-kat.json  mlkem768x25519-keygen-kat.json  mlkem768x25519-shake-expand-kat.json  x25519-roundtrip.json  x25519-validation.json
tests/fixtures/crypto-core/merkle/: leaves-list-negative.json  rfc9162-sha256-inclusion-proof-kat.json
tests/fixtures/crypto-core/poe-record/: maximal-record-with-extension-keys.json  validator-negative.json
tests/fixtures/crypto-core/sealed-poe/: _build-hybrid-fixtures.test.ts  _build-multipriv-fixtures.test.ts  construction-negative.json  passphrase-n1.json  transcript-bytes.json  unwrap-multipriv-ac9-no-match.json  unwrap-multipriv-ac9-priv0-slot31.json  unwrap-multipriv-ac9-priv4-slot0.json  unwrap-multipriv-ac9-priv4-slot31.json  unwrap-multipriv-archived-match.json  unwrap-multipriv-current-match.json  unwrap-multipriv-n32-k10-worst-case.json  unwrap-multipriv-no-match.json  unwrap-n1-empty.json  unwrap-n32.json  unwrap-negative.json  wrap-hybrid-n1.json  wrap-hybrid-n3.json  wrap-n1-empty.json  wrap-n3.json  wrap-negative.json
tests/fixtures/sdk-py/: README.md  mainnet-corpus.json
(+74 files in other folders)
