[package]
name = "cardanowall"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cardanowall <hello@cardanowall.com>"]
description = "Rust SDK for the CIP-309 Proof-of-Existence standard."
repository = "https://github.com/cardanowall/cip309-rs"
homepage = "https://github.com/cardanowall/cip309-rs"
documentation = "https://docs.rs/cardanowall"
readme = "README.md"
keywords = ["cardano", "cip-309", "proof-of-existence", "verifier", "sdk"]
categories = ["cryptography", "api-bindings"]

# Standalone crate: this lives inside a JavaScript/pnpm monorepo that has no
# parent Cargo workspace. The empty table makes the crate its own workspace
# root so cargo never walks upward looking for one.
[workspace]

[dependencies]
argon2 = "0.5.3"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2"
# The OS CSPRNG behind the secure-by-default sealed-PoE wrap. Already resolved
# transitively (via chacha20poly1305 -> crypto-common -> rand_core); promoting
# it to a direct dependency adds no new crate to the lockfile.
getrandom = "0.2"
hex = "0.4.3"
hkdf = "0.13.0"
hmac = "0.13.0"
ml-kem = "0.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sha3 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
# NFKC compatibility normalisation for the recipient-decrypt passphrase path,
# matching the reference SDKs (ICU/`unicodedata` in TS/Python). The lean
# unicode-rs crate; its `tinyvec` transitive is already resolved via the HTTP
# client stack.
unicode-normalization = "0.1"
x25519-dalek = "2"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
# Read-side CBOR oracle: the test harness cross-checks our hand-rolled canonical
# encoder against an independent decoder. The library itself never parses CBOR
# with this crate, so it stays out of the published runtime dependency set.
ciborium = "0.2.2"
