[package]
name = "cardanowall"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["CardanoWall <hello@cardanowall.com>"]
description = "Rust SDK for the Label 309 Proof-of-Existence standard."
repository = "https://github.com/cardanowall/label-309-rs"
homepage = "https://github.com/cardanowall/label-309-rs"
documentation = "https://docs.rs/cardanowall"
readme = "README.md"
keywords = ["cardano", "label-309", "proof-of-existence", "verifier", "sdk"]
categories = ["cryptography", "api-bindings"]

# Standalone crate: this lives inside a JavaScript/pnpm monorepo that has no
# parent Cargo workspace. The empty table makes the crate its own workspace
# root so cargo never walks upward looking for one.
[workspace]

[features]
# The `client` feature gates the gateway HTTP client namespace and the only
# pieces that need an HTTP stack: the blocking-reqwest production transport, the
# default-transport wiring, and the seed-backed `Signer` impl the client's
# publish path consumes. It is on by default, so the full SDK surface is
# available out of the box. Build with `--no-default-features` for a transport-
# free crate that keeps the entire structural validator, the pure verifier
# pipeline, the SSRF / deny-host guards, and the cryptographic primitives — a
# caller injects its own `FetchTransport` for any network I/O.
default = ["client"]
client = ["dep:reqwest"]

[package.metadata.docs.rs]
# Document the full surface, including the default-on `client` namespace, on
# docs.rs.
all-features = true

[dependencies]
argon2 = "0.5.3"
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2"
# The OS CSPRNG behind the secure-by-default sealed-PoE wrap. Already resolved
# transitively (via chacha20poly1305 -> crypto-common -> rand_core); promoting
# it to a direct dependency adds no new crate to the lockfile.
getrandom = "0.2"
hex = "0.4.3"
hkdf = "0.13.0"
hmac = "0.13.0"
ml-kem = "0.3.2"
# Gated behind the `client` feature: the HTTP stack is only needed for the
# gateway client namespace and the production blocking transport. The pure
# verifier (deny-host + SSRF guards) parses URLs with the `url` crate instead,
# so the no-default-features build stays HTTP-free.
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "blocking"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sha3 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
# NFKC compatibility normalisation for the recipient-decrypt passphrase path,
# matching the reference SDKs (ICU/`unicodedata` in TS/Python). The lean
# unicode-rs crate; its `tinyvec` transitive is already resolved via the HTTP
# client stack.
unicode-normalization = "0.1"
# RFC 3986 URL parsing for the verifier's pure deny-host and SSRF guards. Kept
# out of the `client` feature so scheme/host extraction (and therefore the full
# egress-policy validation) is available in the transport-free build. Already
# resolved transitively via the HTTP stack, so it adds no new crate when
# `client` is enabled.
url = "2.5"
x25519-dalek = "2"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
# Read-side CBOR oracle: the test harness cross-checks our hand-rolled canonical
# encoder against an independent decoder. The library itself never parses CBOR
# with this crate, so it stays out of the published runtime dependency set.
ciborium = "0.2.2"
# HMAC-SHA256 + SHA-256 for the test harness to compute the reference slots_mac
# when crafting the CEK-conflict behavioural vector. Both are already runtime
# dependencies of the crate, so this adds no new supply-chain surface; the
# dev-dep entry just makes them reachable from the integration-test crates.
hmac = "0.13.0"
sha2 = "0.11.0"
